--- a/fractol_norm/Makefile
+++ b/fractol_norm/Makefile
@@ -17,10 +17,12 @@ I_PATH	= ./../minilibx-linux/ #/usr/local/include
 L_PATH	= ./../minilibx-linux/  #/usr/local/lib/
 LIB	= -lmlx -lXext -lX11 -lm
 
-CFILES	= fractol.c init.c input_check.c render_image.c error_exit_handlings.c utils.c \
-			event_handling.c ft_printf.c ft_print_arguments.c color_palettes.c
-OBJ	=  fractol.o init.o input_check.o render_image.o error_exit_handlings.o utils.o \
-		event_handling.o ft_printf.o ft_print_arguments.o color_palettes.o 
+CFILES	= fractol.c init.c input_check.c render_image.c error_exit_handlings.c \
+			utils.c event_handling.c ft_printf.c ft_print_arguments.c \
+			color_palettes_1.c color_palettes_2.c
+OBJ	=  fractol.o init.o input_check.o render_image.o error_exit_handlings.o \
+		utils.o	event_handling.o ft_printf.o ft_print_arguments.o \
+		color_palettes_1.o color_palettes_2.o
 
 all:		$(NAME)
 
